--- a/Google_Api_Lat_Long_Final-checkpoint.ipynb
+++ b/Google_Api_Lat_Long_Final-checkpoint.ipynb
@@ -11,7 +11,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "gmap = googlemaps.Client(key='AIzaSyB8V2v8Edkm3ZSArapoe0f0wstYofN-51U')"
+    "gmap = googlemaps.Client(key='')"
    ]
   },
   {
